EFP_ICAPS_old/lcp.output
Nonterminals useless in grammar

   gd_formula


Rules useless in grammar

   77 gd_formula: literal
   78           | gd_formula COMMA gd_formula
   79           | gd_formula OR gd_formula
   80           | LEFT_PAREN gd_formula RIGHT_PAREN


State 0 conflicts: 1 reduce/reduce
State 99 conflicts: 2 shift/reduce
State 118 conflicts: 3 shift/reduce
State 134 conflicts: 3 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | fluent_decls action_decls agent_decls domain init_spec goal_spec

    3 id: ID

    4 constant: NUMBER
    5         | id

    6 param: constant

    7 param_list: param
    8           | param_list COMMA param

    9 fluent: id
   10       | id LEFT_PAREN param_list RIGHT_PAREN

   11 fluent_det_list: fluent

   12 fluent_list: fluent
   13            | fluent_list COMMA fluent

   14 literal: fluent
   15        | NEGATION fluent

   16 literal_list: literal
   17             | literal_list COMMA literal

   18 formula: literal
   19        | formula COMMA formula
   20        | formula OR formula
   21        | LEFT_PAREN formula RIGHT_PAREN

   22 fluent_decl: FLUENT fluent_list SEMICOLON

   23 fluent_decls: %empty
   24             | fluent_decls fluent_decl

   25 action: id
   26       | id LEFT_PAREN param_list RIGHT_PAREN

   27 action_list: action
   28            | action_list COMMA action

   29 action_decl: ACTION action_list SEMICOLON

   30 action_decls: %empty
   31             | action_decls action_decl

   32 agent: id
   33      | id LEFT_PAREN param_list RIGHT_PAREN

   34 agent_list: agent
   35           | agent_list COMMA agent

   36 agent_decl: AGENT agent_list SEMICOLON

   37 agent_decls: %empty
   38            | agent_decls agent_decl

   39 if_part: %empty
   40        | IF literal_list

   41 if_part_bf: %empty
   42           | IF belief_formula

   43 belief_formula: formula
   44               | B LEFT_PAREN agent COMMA belief_formula RIGHT_PAREN
   45               | belief_formula COMMA belief_formula
   46               | belief_formula OR belief_formula
   47               | LEFT_PAREN NEGATION belief_formula RIGHT_PAREN
   48               | LEFT_PAREN belief_formula RIGHT_PAREN
   49               | E LEFT_PAREN LEFT_BRAC agent_list RIGHT_BRAC COMMA belief_formula RIGHT_PAREN
   50               | C LEFT_PAREN LEFT_BRAC agent_list RIGHT_BRAC COMMA belief_formula RIGHT_PAREN

   51 if_part_fluent: %empty
   52               | IF formula

   53 static_law: literal_list if_part SEMICOLON

   54 dynamic_law: action CAUSES literal_list if_part_bf SEMICOLON

   55 executability: EXECUTABLE action if_part_bf SEMICOLON

   56 determine: action DETERMINE fluent_det_list SEMICOLON

   57 announcement: action ANNOUNCES formula SEMICOLON

   58 awareness: agent AWAREOF action if_part_fluent SEMICOLON

   59 observance: agent OBSERVES action if_part_fluent SEMICOLON

   60 impossibility: IMPOSSIBLE action if_part SEMICOLON

   61 proposition: static_law
   62            | dynamic_law
   63            | executability
   64            | impossibility
   65            | determine
   66            | announcement
   67            | observance
   68            | awareness

   69 domain: %empty
   70       | domain proposition

   71 init: INIT belief_formula SEMICOLON

   72 init_spec: %empty
   73          | init_spec init

   74 goal: GOAL belief_formula SEMICOLON

   75 goal_spec: %empty
   76          | goal_spec goal


Terminals, with rules where they appear

$end (0) 0
error (256)
OR (258) 20 46
COMMA (259) 8 13 17 19 28 35 44 45 49 50
SEMICOLON (260) 22 29 36 53 54 55 56 57 58 59 60 71 74
LEFT_PAREN (261) 10 21 26 33 44 47 48 49 50
RIGHT_PAREN (262) 10 21 26 33 44 47 48 49 50
RIGHT_BRAC (263) 49 50
LEFT_BRAC (264) 49 50
ID (265) 3
NEGATION (266) 15 47
NUMBER (267) 4
FLUENT (268) 22
ACTION (269) 29
IF (270) 40 42 52
CAUSES (271) 54
EXECUTABLE (272) 55
IMPOSSIBLE (273) 60
DETERMINE (274) 56
AWAREOF (275) 58
OBSERVES (276) 59
ANNOUNCES (277) 57
INIT (278) 71
GOAL (279) 74
AGENT (280) 36
B (281) 44
C (282) 50
E (283) 49


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
input (30)
    on left: 1 2, on right: 0
id (31)
    on left: 3, on right: 5 9 10 25 26 32 33
constant (32)
    on left: 4 5, on right: 6
param (33)
    on left: 6, on right: 7 8
param_list (34)
    on left: 7 8, on right: 8 10 26 33
fluent (35)
    on left: 9 10, on right: 11 12 13 14 15
fluent_det_list (36)
    on left: 11, on right: 56
fluent_list (37)
    on left: 12 13, on right: 13 22
literal (38)
    on left: 14 15, on right: 16 17 18
literal_list (39)
    on left: 16 17, on right: 17 40 53 54
formula (40)
    on left: 18 19 20 21, on right: 19 20 21 43 52 57
fluent_decl (41)
    on left: 22, on right: 24
fluent_decls (42)
    on left: 23 24, on right: 2 24
action (43)
    on left: 25 26, on right: 27 28 54 55 56 57 58 59 60
action_list (44)
    on left: 27 28, on right: 28 29
action_decl (45)
    on left: 29, on right: 31
action_decls (46)
    on left: 30 31, on right: 2 31
agent (47)
    on left: 32 33, on right: 34 35 44 58 59
agent_list (48)
    on left: 34 35, on right: 35 36 49 50
agent_decl (49)
    on left: 36, on right: 38
agent_decls (50)
    on left: 37 38, on right: 2 38
if_part (51)
    on left: 39 40, on right: 53 60
if_part_bf (52)
    on left: 41 42, on right: 54 55
belief_formula (53)
    on left: 43 44 45 46 47 48 49 50, on right: 42 44 45 46 47 48 49
    50 71 74
if_part_fluent (54)
    on left: 51 52, on right: 58 59
static_law (55)
    on left: 53, on right: 61
dynamic_law (56)
    on left: 54, on right: 62
executability (57)
    on left: 55, on right: 63
determine (58)
    on left: 56, on right: 65
announcement (59)
    on left: 57, on right: 66
awareness (60)
    on left: 58, on right: 68
observance (61)
    on left: 59, on right: 67
impossibility (62)
    on left: 60, on right: 64
proposition (63)
    on left: 61 62 63 64 65 66 67 68, on right: 70
domain (64)
    on left: 69 70, on right: 2 70
init (65)
    on left: 71, on right: 73
init_spec (66)
    on left: 72 73, on right: 2 73
goal (67)
    on left: 74, on right: 76
goal_spec (68)
    on left: 75 76, on right: 2 76


State 0

    0 $accept: . input $end

    $end      reduce using rule 1 (input)
    $end      [reduce using rule 23 (fluent_decls)]
    $default  reduce using rule 23 (fluent_decls)

    input         go to state 1
    fluent_decls  go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    2 input: fluent_decls . action_decls agent_decls domain init_spec goal_spec
   24 fluent_decls: fluent_decls . fluent_decl

    FLUENT  shift, and go to state 4

    $default  reduce using rule 30 (action_decls)

    fluent_decl   go to state 5
    action_decls  go to state 6


State 3

    0 $accept: input $end .

    $default  accept


State 4

   22 fluent_decl: FLUENT . fluent_list SEMICOLON

    ID  shift, and go to state 7

    id           go to state 8
    fluent       go to state 9
    fluent_list  go to state 10


State 5

   24 fluent_decls: fluent_decls fluent_decl .

    $default  reduce using rule 24 (fluent_decls)


State 6

    2 input: fluent_decls action_decls . agent_decls domain init_spec goal_spec
   31 action_decls: action_decls . action_decl

    ACTION  shift, and go to state 11

    $default  reduce using rule 37 (agent_decls)

    action_decl  go to state 12
    agent_decls  go to state 13


State 7

    3 id: ID .

    $default  reduce using rule 3 (id)


State 8

    9 fluent: id .
   10       | id . LEFT_PAREN param_list RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 14

    $default  reduce using rule 9 (fluent)


State 9

   12 fluent_list: fluent .

    $default  reduce using rule 12 (fluent_list)


State 10

   13 fluent_list: fluent_list . COMMA fluent
   22 fluent_decl: FLUENT fluent_list . SEMICOLON

    COMMA      shift, and go to state 15
    SEMICOLON  shift, and go to state 16


State 11

   29 action_decl: ACTION . action_list SEMICOLON

    ID  shift, and go to state 7

    id           go to state 17
    action       go to state 18
    action_list  go to state 19


State 12

   31 action_decls: action_decls action_decl .

    $default  reduce using rule 31 (action_decls)


State 13

    2 input: fluent_decls action_decls agent_decls . domain init_spec goal_spec
   38 agent_decls: agent_decls . agent_decl

    AGENT  shift, and go to state 20

    $default  reduce using rule 69 (domain)

    agent_decl  go to state 21
    domain      go to state 22


State 14

   10 fluent: id LEFT_PAREN . param_list RIGHT_PAREN

    ID      shift, and go to state 7
    NUMBER  shift, and go to state 23

    id          go to state 24
    constant    go to state 25
    param       go to state 26
    param_list  go to state 27


State 15

   13 fluent_list: fluent_list COMMA . fluent

    ID  shift, and go to state 7

    id      go to state 8
    fluent  go to state 28


State 16

   22 fluent_decl: FLUENT fluent_list SEMICOLON .

    $default  reduce using rule 22 (fluent_decl)


State 17

   25 action: id .
   26       | id . LEFT_PAREN param_list RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 29

    $default  reduce using rule 25 (action)


State 18

   27 action_list: action .

    $default  reduce using rule 27 (action_list)


State 19

   28 action_list: action_list . COMMA action
   29 action_decl: ACTION action_list . SEMICOLON

    COMMA      shift, and go to state 30
    SEMICOLON  shift, and go to state 31


State 20

   36 agent_decl: AGENT . agent_list SEMICOLON

    ID  shift, and go to state 7

    id          go to state 32
    agent       go to state 33
    agent_list  go to state 34


State 21

   38 agent_decls: agent_decls agent_decl .

    $default  reduce using rule 38 (agent_decls)


State 22

    2 input: fluent_decls action_decls agent_decls domain . init_spec goal_spec
   70 domain: domain . proposition

    ID          shift, and go to state 7
    NEGATION    shift, and go to state 35
    EXECUTABLE  shift, and go to state 36
    IMPOSSIBLE  shift, and go to state 37

    $default  reduce using rule 72 (init_spec)

    id             go to state 38
    fluent         go to state 39
    literal        go to state 40
    literal_list   go to state 41
    action         go to state 42
    agent          go to state 43
    static_law     go to state 44
    dynamic_law    go to state 45
    executability  go to state 46
    determine      go to state 47
    announcement   go to state 48
    awareness      go to state 49
    observance     go to state 50
    impossibility  go to state 51
    proposition    go to state 52
    init_spec      go to state 53


State 23

    4 constant: NUMBER .

    $default  reduce using rule 4 (constant)


State 24

    5 constant: id .

    $default  reduce using rule 5 (constant)


State 25

    6 param: constant .

    $default  reduce using rule 6 (param)


State 26

    7 param_list: param .

    $default  reduce using rule 7 (param_list)


State 27

    8 param_list: param_list . COMMA param
   10 fluent: id LEFT_PAREN param_list . RIGHT_PAREN

    COMMA        shift, and go to state 54
    RIGHT_PAREN  shift, and go to state 55


State 28

   13 fluent_list: fluent_list COMMA fluent .

    $default  reduce using rule 13 (fluent_list)


State 29

   26 action: id LEFT_PAREN . param_list RIGHT_PAREN

    ID      shift, and go to state 7
    NUMBER  shift, and go to state 23

    id          go to state 24
    constant    go to state 25
    param       go to state 26
    param_list  go to state 56


State 30

   28 action_list: action_list COMMA . action

    ID  shift, and go to state 7

    id      go to state 17
    action  go to state 57


State 31

   29 action_decl: ACTION action_list SEMICOLON .

    $default  reduce using rule 29 (action_decl)


State 32

   32 agent: id .
   33      | id . LEFT_PAREN param_list RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 58

    $default  reduce using rule 32 (agent)


State 33

   34 agent_list: agent .

    $default  reduce using rule 34 (agent_list)


State 34

   35 agent_list: agent_list . COMMA agent
   36 agent_decl: AGENT agent_list . SEMICOLON

    COMMA      shift, and go to state 59
    SEMICOLON  shift, and go to state 60


State 35

   15 literal: NEGATION . fluent

    ID  shift, and go to state 7

    id      go to state 8
    fluent  go to state 61


State 36

   55 executability: EXECUTABLE . action if_part_bf SEMICOLON

    ID  shift, and go to state 7

    id      go to state 17
    action  go to state 62


State 37

   60 impossibility: IMPOSSIBLE . action if_part SEMICOLON

    ID  shift, and go to state 7

    id      go to state 17
    action  go to state 63


State 38

    9 fluent: id .
   10       | id . LEFT_PAREN param_list RIGHT_PAREN
   25 action: id .
   26       | id . LEFT_PAREN param_list RIGHT_PAREN
   32 agent: id .
   33      | id . LEFT_PAREN param_list RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 64

    CAUSES     reduce using rule 25 (action)
    DETERMINE  reduce using rule 25 (action)
    AWAREOF    reduce using rule 32 (agent)
    OBSERVES   reduce using rule 32 (agent)
    ANNOUNCES  reduce using rule 25 (action)
    $default   reduce using rule 9 (fluent)


State 39

   14 literal: fluent .

    $default  reduce using rule 14 (literal)


State 40

   16 literal_list: literal .

    $default  reduce using rule 16 (literal_list)


State 41

   17 literal_list: literal_list . COMMA literal
   53 static_law: literal_list . if_part SEMICOLON

    COMMA  shift, and go to state 65
    IF     shift, and go to state 66

    $default  reduce using rule 39 (if_part)

    if_part  go to state 67


State 42

   54 dynamic_law: action . CAUSES literal_list if_part_bf SEMICOLON
   56 determine: action . DETERMINE fluent_det_list SEMICOLON
   57 announcement: action . ANNOUNCES formula SEMICOLON

    CAUSES     shift, and go to state 68
    DETERMINE  shift, and go to state 69
    ANNOUNCES  shift, and go to state 70


State 43

   58 awareness: agent . AWAREOF action if_part_fluent SEMICOLON
   59 observance: agent . OBSERVES action if_part_fluent SEMICOLON

    AWAREOF   shift, and go to state 71
    OBSERVES  shift, and go to state 72


State 44

   61 proposition: static_law .

    $default  reduce using rule 61 (proposition)


State 45

   62 proposition: dynamic_law .

    $default  reduce using rule 62 (proposition)


State 46

   63 proposition: executability .

    $default  reduce using rule 63 (proposition)


State 47

   65 proposition: determine .

    $default  reduce using rule 65 (proposition)


State 48

   66 proposition: announcement .

    $default  reduce using rule 66 (proposition)


State 49

   68 proposition: awareness .

    $default  reduce using rule 68 (proposition)


State 50

   67 proposition: observance .

    $default  reduce using rule 67 (proposition)


State 51

   64 proposition: impossibility .

    $default  reduce using rule 64 (proposition)


State 52

   70 domain: domain proposition .

    $default  reduce using rule 70 (domain)


State 53

    2 input: fluent_decls action_decls agent_decls domain init_spec . goal_spec
   73 init_spec: init_spec . init

    INIT  shift, and go to state 73

    $default  reduce using rule 75 (goal_spec)

    init       go to state 74
    goal_spec  go to state 75


State 54

    8 param_list: param_list COMMA . param

    ID      shift, and go to state 7
    NUMBER  shift, and go to state 23

    id        go to state 24
    constant  go to state 25
    param     go to state 76


State 55

   10 fluent: id LEFT_PAREN param_list RIGHT_PAREN .

    $default  reduce using rule 10 (fluent)


State 56

    8 param_list: param_list . COMMA param
   26 action: id LEFT_PAREN param_list . RIGHT_PAREN

    COMMA        shift, and go to state 54
    RIGHT_PAREN  shift, and go to state 77


State 57

   28 action_list: action_list COMMA action .

    $default  reduce using rule 28 (action_list)


State 58

   33 agent: id LEFT_PAREN . param_list RIGHT_PAREN

    ID      shift, and go to state 7
    NUMBER  shift, and go to state 23

    id          go to state 24
    constant    go to state 25
    param       go to state 26
    param_list  go to state 78


State 59

   35 agent_list: agent_list COMMA . agent

    ID  shift, and go to state 7

    id     go to state 32
    agent  go to state 79


State 60

   36 agent_decl: AGENT agent_list SEMICOLON .

    $default  reduce using rule 36 (agent_decl)


State 61

   15 literal: NEGATION fluent .

    $default  reduce using rule 15 (literal)


State 62

   55 executability: EXECUTABLE action . if_part_bf SEMICOLON

    IF  shift, and go to state 80

    $default  reduce using rule 41 (if_part_bf)

    if_part_bf  go to state 81


State 63

   60 impossibility: IMPOSSIBLE action . if_part SEMICOLON

    IF  shift, and go to state 66

    $default  reduce using rule 39 (if_part)

    if_part  go to state 82


State 64

   10 fluent: id LEFT_PAREN . param_list RIGHT_PAREN
   26 action: id LEFT_PAREN . param_list RIGHT_PAREN
   33 agent: id LEFT_PAREN . param_list RIGHT_PAREN

    ID      shift, and go to state 7
    NUMBER  shift, and go to state 23

    id          go to state 24
    constant    go to state 25
    param       go to state 26
    param_list  go to state 83


State 65

   17 literal_list: literal_list COMMA . literal

    ID        shift, and go to state 7
    NEGATION  shift, and go to state 35

    id       go to state 8
    fluent   go to state 39
    literal  go to state 84


State 66

   40 if_part: IF . literal_list

    ID        shift, and go to state 7
    NEGATION  shift, and go to state 35

    id            go to state 8
    fluent        go to state 39
    literal       go to state 40
    literal_list  go to state 85


State 67

   53 static_law: literal_list if_part . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 68

   54 dynamic_law: action CAUSES . literal_list if_part_bf SEMICOLON

    ID        shift, and go to state 7
    NEGATION  shift, and go to state 35

    id            go to state 8
    fluent        go to state 39
    literal       go to state 40
    literal_list  go to state 87


State 69

   56 determine: action DETERMINE . fluent_det_list SEMICOLON

    ID  shift, and go to state 7
